Fix syntax highlighting and code blocks in dark mode

--- a/theme/static/css/main.css
+++ b/theme/static/css/main.css
@@ -77,7 +77,6 @@ h3 {
 
 .codehilite pre {
   padding: 0.4em;
-  background-color: #f5f5f5;
   border-radius: .25rem !important;
   border: 1px solid #dee2e6 !important;
 }
